--- a/suction_pump/package.xml
+++ b/suction_pump/package.xml
@@ -3,12 +3,13 @@
   <name>suction_pump</name>
   <version>0.0.1</version>
   <description>
-   Suction pump interface. Supports VG-10 pump.
+   Suction pump interface. Supports schmaltz FXP pump.
   </description>
   <license>Commercial</license>
   <maintainer email="gautham.manoharan@rapyuta-robotics.com">Gautham Manoharan</maintainer>
   <maintainer email="bhuvanchandra.dv@rapyuta-robotics.com">Bhuvanchandra</maintainer>
-
+  <maintainer email="yu.okamoto@rapyuta-robotics.com">Yu Okamoto</maintainer>
+  
   <buildtool_depend>catkin</buildtool_depend>
   
   <depend>roscpp</depend>
