--- a/suction_pump/CMakeLists.txt
+++ b/suction_pump/CMakeLists.txt
@@ -49,7 +49,7 @@ include_directories(
 )
 
 add_executable(${PROJECT_NAME}_action_server
-    src/suction_pump.cpp
+    #src/suction_pump.cpp
     src/suction_pump_action_server.cpp
 )
 
