--- a/sensors/rr_analog_sensor/package.xml
+++ b/sensors/rr_analog_sensor/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>rr_sensors</name>
+  <name>rr_analog_sensor</name>
   <version>0.0.1</version>
   <description>
    Suction pump interface. Supports schmaltz FXP pump.
