--- a/hw_interfaces/gpio/rr_libsoc_gpio/package.xml
+++ b/hw_interfaces/gpio/rr_libsoc_gpio/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>rr_suction_pump</name>
+  <name>rr_libsoc_gpio</name>
   <version>0.0.1</version>
   <description>
    Suction pump interface. Supports schmaltz FXP pump.
@@ -13,10 +13,7 @@
   <buildtool_depend>catkin</buildtool_depend>
   
   <depend>roscpp</depend>
-  <depend>actionlib</depend>
-  <depend>actionlib_msgs</depend>
   <depend>rr_hw_interface</depend>
-  <depend>rr_libsoc_gpio</depend>
 
   <exec_depend>message_generation</exec_depend>
 </package>
