add revpi aio and update analog sensor

--- a/rr_hw_interface/CMakeLists.txt
+++ b/rr_hw_interface/CMakeLists.txt
@@ -41,6 +41,7 @@ set(CMAKE_CXX_FLAGS "-std=c++11 -fPIC ${CMAKE_CXX_FLAGS}")
 add_library(${PROJECT_NAME} 
   src/gpio/libsoc_gpio.cpp
   src/gpio/revpi_gpio.cpp
+  src/aio/revpi_aio.cpp
   )
 
 target_include_directories(${PROJECT_NAME} PUBLIC external/librevpi/include)
