--- a/sensors/rr_analog_sensor/package.xml
+++ b/sensors/rr_analog_sensor/package.xml
@@ -3,11 +3,11 @@
   <name>rr_analog_sensor</name>
   <version>0.0.1</version>
   <description>
-   Suction pump interface. Supports schmaltz FXP pump.
+   Analog sensor interface
   </description>
   <license>Commercial</license>
   <maintainer email="bhuvanchandra.dv@rapyuta-robotics.com">Bhuvanchandra</maintainer>
-  <maintainer email="tomin@rapyuta-robotics.com">Gautham Manoharan</maintainer>
+  <maintainer email="tomin@rapyuta-robotics.com">Tomin Joseph</maintainer>
   <maintainer email="yu.okamoto@rapyuta-robotics.com">Yu Okamoto</maintainer>
   
   <buildtool_depend>catkin</buildtool_depend>
