--- a/grippers/rr_suction_pump/config/fxp.yaml
+++ b/grippers/rr_suction_pump/config/fxp.yaml
@@ -4,6 +4,7 @@ status_num: 2
 output_normally_on: false
 input_normally_on: true
 
-trigger_gpio0: "O_1"
-status_gpio0: "I_1"
-status_gpio1: "I_2"
+suction_pump_fxp:
+  trigger_gpio0: "O_1"
+  status_gpio0: "I_1"
+  status_gpio1: "I_2"
